Fix p tags overlapping

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -99,10 +99,10 @@ h1 {
 
 
 p {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    text-align: center;
+    overflow: hidden;
+    margin: 0px 94px;
+    padding: 2px;
+    text-align: left;
     color: black;
     font-family: 'BebasNeueRegular';
     font-size: 16px;
